samples/_failures_safe/1761522190_a7eab2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3de7c3ca.c: In function ‘display_statistics’:
./samples/SAFE/__tmp_3de7c3ca.c:129:12: error: missing terminating " character
  129 |     printf("Most frequent level: %s (%d occurrences)\
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_3de7c3ca.c:129:5: error: expected expression at end of input
  129 |     printf("Most frequent level: %s (%d occurrences)\
      |     ^~~~~~
./samples/SAFE/__tmp_3de7c3ca.c:129:5: error: expected declaration or statement at end of input
